tests/error/malformed_hex_escape.gw
#! [contains] malformed hex escape sequence
<<<"\xG">>>;
